# heratape

./: .coveragerc  .pre-commit-config.yaml  LICENSE  README.md  environment.yaml  pyproject.toml  setup.py
.github/workflows/: testsuite.yaml
alembic/: env.py  script.py.mako
alembic/versions/: 52d59542b661_initial_revision.py  9b75448754a1_initial_revision.py
ci/: example_config.json  heratape_min_versions.yaml  heratape_tests.yaml
src/heratape/: __init__.py  base.py  db_check.py  files.py  tapes.py
tests/: conftest.py  test_base.py  test_db_check.py  test_default_db_schema.py  test_files.py  test_tapes.py
